# BayesianOrdinal

./: CMakeLists.txt
src/gslstat/: CMakeLists.txt  TO_DO.md  gslstat.h
src/gslstat/bOrdinal/: bOrdinal.cpp  bOrdinal.h
src/gslstat/cmake/Modules/: FindAtlas.cmake  FindMKL.cmake
src/gslstat/src/linalg/: matrix.h  vector.h
src/gslstat/src/optimization/: optimizer.h
src/gslstat/src/random/: random.h  random_v2.h
src/gslstat/tbb_cilk/: cilk.cpp  tbb.cpp  tbb.cpp~
src/gslstat/test/: eigen_interop.cpp  misc_test.cpp  test_b_ord.cpp  test_random.cpp
